ggplot2 0.8.1  (2008-XX-XX)
----------------------------------------

* layers gain a legend argument, which allow you to force the layer either into (TRUE) or out of (FALSE) the legend
* position_dodge now works for any number of elements with smaller widths, not just 2!
* geom_smooth gives a more accurate warning when you have incorrectly specified the grouping
* geom_smooth now gives correct asymmetric standard errors with generalised linear models (thanks to Thierry Onkelinx)
* new labs, xlab & ylab functions for easily modifying axis labels and legend titles
* geom_vline and geom_hline now correctly transform their intercepts if the scale is transformed    
* geom_vline and geom_hline: now use xintercept and yintercept instead of intercept
* scale_discrete_position: does a better job of calculating axis limits when plotting a mixture of continuous and discrete values (e.g. with geom_jitter)
* facet_wrap: labels correctly clipped to axis ranges
* facet_wrap: fixed bug with ncol = 1 or nrow = 1
* tweaks to plot and legend layout
* theme: new theme setting plot.margins to control the plot margins
* theme: new theme setting legend.key.size determines size of keys in legend
* coord_flip: flips axes labels again too
* geom_smooth will switch to an alternative smoothing method (mgcv::gam(y ~ s(x, bs = "cr"))), when there are more than 1000 observations
* summary: tweaks to improve output
* scale_datetime: first attempt at a scale for date time objects of class POSIXt
* qplot will now use a histogram if you only supply an x variable, and if you only supply a y variable it will set x to seq_along(y).  
* legends should now work in cases where you have multiple layers the use the same geom and have different aesthetic mappings
* facet_wrap: now works when a layer doesn't contain every level of the faceting variables
* facet_grid: fix bug where tick labels where being produced outside the range of the axes
* coord_cartesian now calculates scales correctly again